# harbour-datameter

./: .gitignore  CMakeLists.txt  README.md  harbour-datameter.desktop  harbour-datameter.pro
.github/workflows/: build.yml
qml/: harbour-datameter.qml
qml/cover/: CoverPage.qml
qml/pages/: FirstPage.qml  MainPage.qml
rpm/: harbour-datameter.changes  harbour-datameter.changes.in  harbour-datameter.changes.run.in  harbour-datameter.spec  harbour-datameter.yaml
src/: config.h.in  cyclichttprequest.cpp  cyclichttprequest.h  harbour-datameter.cpp  networklistener.cpp  networklistener.h  networkresponse.cpp  networkresponse.h  provider.cpp  provider.h
src/provider/: deutsche-telekom.cpp  deutsche-telekom.h  fake.cpp  fake.h
translations/: harbour-datameter-de.ts  harbour-datameter.ts
